force-app/main/default/objects/Facturas_posicionesSet__x/Facturas_posicionesSet__x.object-meta.xml
<CustomObject>
    <externalDataSource>SAP</externalDataSource>
    <externalName>Facturas_posicionesSet</externalName>
    <label>Facturas_posicionesSet</label>
    <pluralLabel>Facturas_posicionesSet</pluralLabel>
</CustomObject>