force-app/main/default/objects/Facturas_posicionesSet__x/fields/aubel__c.field-meta.xml
<CustomField>
    <fullName>aubel__c</fullName>
    <description>aubel</description>
    <externalDeveloperName>aubel</externalDeveloperName>
    <label>aubel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>