force-app/main/default/objects/Facturas_posicionesSet__x/fields/aupos__c.field-meta.xml
<CustomField>
    <fullName>aupos__c</fullName>
    <description>aupos</description>
    <externalDeveloperName>aupos</externalDeveloperName>
    <label>aupos</label>
    <length>6</length>
    <type>Text</type>
</CustomField>