force-app/main/default/objects/Facturas_posicionesSet__x/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Cost</description>
    <externalDeveloperName>Cost</externalDeveloperName>
    <label>Cost</label>
    <precision>14</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>