force-app/main/default/objects/Facturas_posicionesSet__x/fields/Dtax__c.field-meta.xml
<CustomField>
    <fullName>Dtax__c</fullName>
    <description>Dtax</description>
    <externalDeveloperName>Dtax</externalDeveloperName>
    <label>Dtax</label>
    <precision>14</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>