force-app/main/default/objects/Facturas_posicionesSet__x/fields/Lgort__c.field-meta.xml
<CustomField>
    <fullName>Lgort__c</fullName>
    <description>Lgort</description>
    <externalDeveloperName>Werks</externalDeveloperName>
    <label>Lgort</label>
    <length>4</length>
    <type>Text</type>
</CustomField>