force-app/main/default/objects/Facturas_posicionesSet__x/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <description>Pedido</description>
    <externalDeveloperName>Pedido</externalDeveloperName>
    <label>Pedido</label>
    <length>10</length>
    <type>Text</type>
</CustomField>