force-app/main/default/objects/Facturas_posicionesSet__x/fields/Pospedido__c.field-meta.xml
<CustomField>
    <fullName>Pospedido__c</fullName>
    <description>Pospedido</description>
    <externalDeveloperName>Pospedido</externalDeveloperName>
    <label>Pospedido</label>
    <length>6</length>
    <type>Text</type>
</CustomField>