force-app/main/default/objects/Facturas_posicionesSet__x/fields/Posreferd__c.field-meta.xml
<CustomField>
    <fullName>Posreferd__c</fullName>
    <description>Posreferd</description>
    <externalDeveloperName>Posreferd</externalDeveloperName>
    <label>Posreferd</label>
    <length>6</length>
    <type>Text</type>
</CustomField>