force-app/main/default/objects/Facturas_posicionesSet__x/fields/Referedoc__c.field-meta.xml
<CustomField>
    <fullName>Referedoc__c</fullName>
    <description>Referedoc</description>
    <externalDeveloperName>Referedoc</externalDeveloperName>
    <label>Referedoc</label>
    <length>10</length>
    <type>Text</type>
</CustomField>