force-app/main/default/objects/Facturas_posicionesSet__x/fields/Szone__c.field-meta.xml
<CustomField>
    <fullName>Szone__c</fullName>
    <description>Szone</description>
    <externalDeveloperName>Szone</externalDeveloperName>
    <label>Szone</label>
    <length>6</length>
    <type>Text</type>
</CustomField>