force-app/main/default/objects/Facturas_posicionesSet__x/fields/Zmetres__c.field-meta.xml
<CustomField>
    <fullName>Zmetres__c</fullName>
    <description>Zmetres</description>
    <externalDeveloperName>Zmetres</externalDeveloperName>
    <label>Zmetres</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>