force-app/main/default/objects/Facturas_posicionesSet__x/fields/Zunits__c.field-meta.xml
<CustomField>
    <fullName>Zunits__c</fullName>
    <description>Zunits</description>
    <externalDeveloperName>Zunits</externalDeveloperName>
    <label>Zunits</label>
    <length>3</length>
    <type>Text</type>
</CustomField>